kubernetes/fixit-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: fixit
  name: fixit
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: fixit
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: fixit
  name: fixit
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: fixit
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: fixit
    spec:
      containers:
      - image: troy0820/revconf:v1
        imagePullPolicy: Never
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        name: fixit
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
